@@ -1,2 +1,17 @@
-# Tetrix
+# Petrix
 Little tetris-like game made with JavaFX
+
+# Usage
+* clone this repo
+* import in Eclipse and build
+* launch in a terminal with command
+
+```bash
+java -jar --module-path "path to JavaFX libs" --add-modules=javafx.controls,javafx.fxml .\petris.jar
+````
+
+chez moi :
+
+```bash
+java -jar --module-path "c:\d\java\FX11\lib" --add-modules=javafx.controls,javafx.fxml .\petris.jar
+```
